# oco

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  syntax.md  test.arg  test.script
crates/enum_dispatch_clone/: Cargo.toml
crates/enum_dispatch_clone/src/: lib.rs
src/: main.rs  read_args.rs
src/cli/: deserialize_from_args.rs  dialect.rs  mod.rs
src/commands/: common.rs  compact.rs  full.rs  mod.rs  parser_exts.rs
src/grammar/: compact.pest  full.pest
src/opts/: mod.rs  parsed_args.rs
src/opts/grammar/: gnu.rs  mod.rs
src/util/: iter.rs  mod.rs  shell.rs  str.rs  vec.rs
src/util/testing/: assert_errs.rs  mod.rs  opts.rs
