[package]
name = "optco"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/enum_dispatch_clone"
]

# Improve optimizations for color-eyre/stable-eyre:
# https://github.com/yaahc/color-eyre#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
clio = { version = "0.2.7", features = ["clap-parse"] }
eyre = "0.6.8"
color-eyre = "0.6.2"
enum_dispatch = "0.3.11"
enum_dispatch_clone = { path = "crates/enum_dispatch_clone" }
itertools = "0.11.0"
shlex = "1.1.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"