[package]
name = "oco"
description = """
  A command-line option processor that lets you parse and manipulate the values of command-line options specified in GNU
  or POSIX formats, before pushing them to another command.
"""
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/boazy/oco"

# Improve optimizations for color-eyre/stable-eyre:
# https://github.com/yaahc/color-eyre#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
clio = { version = "0.2.7", features = ["clap-parse"] }
derivative = "2.2.0"
derive-new = "0.5.9"
eyre = "0.6.8"
color-eyre = "0.6.2"
enum_dispatch = "0.3.11"
itertools = "0.11.0"
lazy_static = "1.4.0"
pest = "2.6.0"
pest_derive = "2.6.0"
regex = "1.8.4"
shlex = "1.1.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tap = "1.0.1"

[dev-dependencies]
similar-asserts = "1.4.2"
paste = "1.0.6"
ctor = "0.2.2"